--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
 .App {
   text-align: center;
+  background-color: #21242b;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+h2 {
+  background-color: #6984c4;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,7 +26,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #21242b;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
