--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -14,34 +14,34 @@ section {
   @media (max-width: 480px) and (min-height: 700px) {
     padding-bottom: 10vh;
   }
-  h1 {
-    margin: 0 0 30px 4px;
-    color: $text-color1;
-    font-family: var(--font-mono);
-    font-size: clamp(var(--fz-sm), 5vw, var(--fz-md));
-    font-weight: 400;
-    @media (max-width: 480px) {
-      margin: 0 0 20px 2px;
-    }
-  }
-  h2 {
-    margin: 0 0 30px 4px;
-    color: $text-color1;
-    font-family: var(--font-mono);
-    font-size: clamp(var(--fz-sm), 5vw, var(--fz-md));
-    font-weight: 400;
-    @media (max-width: 480px) {
-      margin: 0 0 20px 2px;
-    }
-  }
-  h3 {
-    margin-top: 10px;
-    color: $text-color1;
-    line-height: 0.9;
-  }
-  p {
-    margin: 20px 0 0;
-    max-width: 540px;
-    color: $text-color1;
-  }
+  // h1 {
+  //   margin: 0 0 30px 4px;
+  //   color: $text-color1;
+  //   font-family: var(--font-mono);
+  //   font-size: clamp(var(--fz-sm), 5vw, var(--fz-md));
+  //   font-weight: 400;
+  //   @media (max-width: 480px) {
+  //     margin: 0 0 20px 2px;
+  //   }
+  // }
+  // h2 {
+  //   margin: 0 0 30px 4px;
+  //   color: $text-color1;
+  //   font-family: var(--font-mono);
+  //   font-size: clamp(var(--fz-sm), 5vw, var(--fz-md));
+  //   font-weight: 400;
+  //   @media (max-width: 480px) {
+  //     margin: 0 0 20px 2px;
+  //   }
+  // }
+  // h3 {
+  //   margin-top: 10px;
+  //   color: $text-color1;
+  //   line-height: 0.9;
+  // }
+  // p {
+  //   margin: 20px 0 0;
+  //   max-width: 540px;
+  //   color: $text-color1;
+  // }
 }
