--- a/src/css/Navigation.scss
+++ b/src/css/Navigation.scss
@@ -2,4 +2,8 @@
   color: aliceblue;
   list-style-type: decimal-leading-zero;
   background-color: #0a192e;
+
+  @media (max-width: 480px) and (min-height: 700px) {
+    padding-bottom: 10vh;
+  }
 }
