--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -1,7 +1,16 @@
 footer {
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  flex-direction: column;
+  height: auto;
+  min-height: 70px;
+  padding: 15px;
   text-align: center;
 
-  .sns-footer {
+  .footer-sns {
     display: none;
     font-size: 20px;
     line-height: 1.3;
@@ -12,16 +21,45 @@ footer {
       margin: 0 auto 10px;
     }
     ul {
-      padding: 0;
-      margin: 0;
+      display: flex;
+      -webkit-box-pack: justify;
+      justify-content: space-between;
+      -webkit-box-align: center;
+      align-items: center;
+      padding: 0px;
+      margin: 0px;
       list-style: none;
       a {
+        display: list-item;
         color: #a8b3d0;
         padding: 10px;
         svg {
           width: 20px;
           height: 20px;
         }
+      }
+    }
+  }
+
+  .footer-info {
+    font-size: 18px;
+    line-height: 1;
+    a {
+      padding: 10px;
+      text-decoration: none;
+      color: #a8b3d0;
+
+      &:hover {
+        color: #7511f6;
+      }
+    }
+
+    .github-stats {
+      margin-top: 10px;
+      & > span {
+        display: inline-flex;
+        align-items: center;
+        margin: 0 7px;
       }
     }
   }
