--- a/src/css/Social.scss
+++ b/src/css/Social.scss
@@ -38,13 +38,12 @@
         padding: 10px;
         &:hover,
         &:focus {
-          transform: translateY(-3px);
+          transform: translateY(3px);
+          color: #7511f6;
         }
         svg {
           width: 20px;
           height: 20px;
-        }
-        &:hover {
         }
       }
     }
