--- a/src/css/Navigation.scss
+++ b/src/css/Navigation.scss
@@ -2,6 +2,7 @@
   color: aliceblue;
   list-style-type: decimal-leading-zero;
   background-color: #0a192e;
+  font-family: "Inconsolata";
 
   @media (max-width: 480px) and (min-height: 700px) {
     padding-bottom: 10vh;
