--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -14,6 +14,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   min-height: 100vh;
+  max-width: 900px;
   margin: 0px auto;
   padding: 100px 0px;
 
@@ -30,7 +31,7 @@ section {
   margin: 10px 0px 40px;
   width: 100%;
   font-family: "Roboto";
-  font-size: clamp(26px, 5vw, 32px);
+  font-size: clamp(26px, 5vw, 37px);
   white-space: nowrap;
   counter-increment: section;
   color: #ccd6f6;
