--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,12 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Roboto:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Noto+Sans+JP:wght@300&family=Roboto:wght@900&display=swap");
 
 html {
   background-color: #0a192e;
 }
 body {
   margin: 0;
-  font-family: "Inconsolata", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Inconsolata", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
