--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -5,8 +5,8 @@ html {
 }
 body {
   margin: 0;
-  font-family: "Inconsolata", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Inconsolata", "Roboto", "Noto Sans JP", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
