--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -24,14 +24,13 @@
       margin-bottom: 10px;
       padding-left: 20px;
       font-family: "Inconsolata";
-      font-size: var(--fz-xs);
+      font-size: 16px;
       &:before {
         content: "▹";
         position: absolute;
         padding-top: 6px;
         left: 0;
         color: #7511f6;
-        font-size: var(--fz-sm);
         line-height: 12px;
       }
     }
